@@ -5614,9 +5614,8 @@ No match
     123456\P
 No match
 
-//KF>testsavedregex
+//S-KF>testsavedregex
 Compiled pattern written to testsavedregex
-Study data written to testsavedregex
 
 /abc/IS>testsavedregex
 Capturing subpattern count = 0
